# Machine-learning-deployed

./: .dockerignore  Dockerfile  app.py  model.ipynb  model.pkl  pyproject.toml  requirement.txt  scaler.pkl
templates/: index.html
